<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/andyImage"
        android:layout_width="170dp"
        android:layout_height="167dp"
        android:src="@drawable/andy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/turn_off_flight_mode"
        android:backgroundTint="#7F5AE5"
        android:drawableLeft="@drawable/baseline_airplanemode_inactive_24"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/andyImage"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:drawableLeft="@drawable/baseline_change_circle_24"
        android:backgroundTint="#E5545B"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:text="@string/updating_profile"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#C9C9C9"
        android:text="@string/picture_saved_to_gallery"
        android:textColor="#BD5669"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/unlocked_level_5"
        android:backgroundTint="#4B4C51"
        app:strokeWidth="2dp"
        app:strokeColor="#B7D7DD"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/level_4_completed"
        app:cornerRadius="4dp"
        android:backgroundTint="#5D84E4"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        android:drawableLeft="@drawable/baseline_star_24"
        android:drawableRight="@drawable/baseline_star_24"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        app:cornerRadius="4dp"
        android:drawableLeft="@drawable/baseline_pause_circle_outline_24"
        android:text="@string/music_paused"
        android:textColor="@color/white"
        android:backgroundTint="#47B06C"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</androidx.constraintlayout.widget.ConstraintLayout>